--- a/web_dev/views/notes.ejs
+++ b/web_dev/views/notes.ejs
@@ -12,6 +12,7 @@
                     <h2>These are my notes.</h2>
                     <p><a href="devops_notes">DevOps Notes</a></p>
                     <p><a href="webdev_notes">WebDev Notes</a></p>
+                    <p><a href="database_notes">Database Notes</a></p>
                 </div>
                 <div class="col-1 col-sm-2 col-md"></div>
             </div>
