updated home page

--- a/web_dev/views/index.ejs
+++ b/web_dev/views/index.ejs
@@ -16,15 +16,13 @@
                         was uploaded to a <a href="https://github.com/rephlekt/website">Github</a> repo, which is
                         watched
                         and
-                        tested by <a href="https://travis-ci.com">Travis CI</a>, which <i>used</i> to be deployed as a
-                        <a href="https://docker.com">Docker</a> container running <a href="https://nginx.com">nginx</a>
+                        tested by <a href="https://travis-ci.com">Travis CI</a>, which deploys as a
+                        <a href="https://docker.com">Docker</a> container running <a
+                            href="https://expressjs.com">Express JS
+                            server</a>
                         to
                         an
-                        <a href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a> instance, but
-                        <i>now</i>
-                        is deployed as a static site in an <a href="https://aws.amazon.com/s3/">AWS S3 bucket</a> to
-                        save me
-                        money.
+                        <a href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a> instance.
                     </p>
                 </div>
                 <div class="col-1 col-sm-2 col-md"></div>
