updated routing on the express server

--- a/web_dev/views/index.ejs
+++ b/web_dev/views/index.ejs
@@ -16,7 +16,7 @@
                         was uploaded to a <a href="https://github.com/rephlekt/website">Github</a> repo, which is
                         watched
                         and
-                        tested by <a href="https://travis-ci.com">Travis CI</a>, which deploys as a
+                        tested by <a href="https://travis-ci.com">Travis CI</a>, which then deploys a
                         <a href="https://docker.com">Docker</a> container running <a
                             href="https://expressjs.com">Express JS
                             server</a>
