--- a/web_dev/views/index.ejs
+++ b/web_dev/views/index.ejs
@@ -17,12 +17,10 @@
                         watched
                         and
                         tested by <a href="https://travis-ci.com">Travis CI</a>, which then deploys a
-                        <a href="https://docker.com">Docker</a> container running <a
-                            href="https://expressjs.com">Express JS
-                            server</a>
-                        to
-                        an
-                        <a href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a> instance.
+                        <a href="https://docker.com">Docker</a> container running an <a
+                            href="https://expressjs.com">Express JS</a>
+                        server to an
+                        <a href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a> environment.
                     </p>
                 </div>
                 <div class="col-1 col-sm-2 col-md"></div>
