--- a/web_dev/views/notes.ejs
+++ b/web_dev/views/notes.ejs
@@ -10,9 +10,9 @@
                 <div class="col-1 col-sm-2 col-md"></div>
                 <div class="col-10 col-sm-8 col-md">
                     <h2>These are my notes.</h2>
-                    <p><a href="devops_notes">DevOps Notes</a></p>
-                    <p><a href="webdev_notes">WebDev Notes</a></p>
-                    <p><a href="database_notes">Database Notes</a></p>
+                    <p><a href="devops_notes">On DevOps</a></p>
+                    <p><a href="webdev_notes">On WebDev</a></p>
+                    <p><a href="database_notes">On Databases</a></p>
                 </div>
                 <div class="col-1 col-sm-2 col-md"></div>
             </div>
